--- a/styles/style.css
+++ b/styles/style.css
@@ -129,7 +129,7 @@ body {
     font-weight: 400;
 }
 
-@media (min-width: 480px) and (max-width: 1200px) {
+@media (max-width: 700px) {
 
     .cabecalho {
         padding: 10%;
