--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
     --cor-secundario: white;
     --cor-terciaria: #66BFF5;
     --cor-hover: black;
+    --cor-hover2: #717cf7;
 
     --font-principal: 'Poppins', sans-serif;
 }
@@ -43,7 +44,7 @@ body {
 }
 
 .apresentacao {
-    padding: 3% 15%;
+    padding: 4% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -66,6 +67,10 @@ body {
 .apresentacao__conteudo__texto {
     font-size: 24px;
     font-family: var(--font-principal)
+}
+
+.apresentacao__conteudo__link__cursos {
+    color: var(--cor-terciaria);
 }
 
 .apresentacao__links {
@@ -100,14 +105,19 @@ body {
 }
 
 .apresentacao__links__navegacao:hover {
-    background-color: var(--cor-primaria);
+    background-color: var(--cor-hover2);
     color: var(--cor-terciaria);
-    padding: 4%;
+
 }
 
 .apresentacao__imagem {
     width: 50%;
 }
+
+.apresentacao__imagem__curriculo {
+    width: 50%;
+}
+
 
 .rodape {
     color: var(--cor-hover);
