--- a/styles/style.css
+++ b/styles/style.css
@@ -150,7 +150,7 @@ body {
     }
 
     .apresentacao__conteudo {
-        width: 100%;
+        width: auto;
     }
 
     .apresentacao__imagem__curriculo {
