--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    gap: 32px;
+    gap: 30px;
+    max-width: 100%;
 }
 
 .apresentacao__links__subtitulo {
@@ -132,7 +133,7 @@ body {
     font-weight: 400;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
     .cabecalho {
       padding: 10% 0;
     }
